@@ -1,5 +1,4 @@
-DIST clex-3.17.tar.gz 193842 RMD160 92fb8b471f9ab077a6905abf98e58d15b9fa0886 SHA1 05ff8cb880ca74395f75f5c8ade87e7637064d65 SHA256 b8ce540bc65b727e58d551eca62f9c3270f7d210b68c52e0103159f60b6b50e1
-DIST clex-help-html-3.17.tar.gz 280714 RMD160 1f81a657a348f9a33f6b284b42c3316dd6cb0560 SHA1 6bd58c8e167d7dd0bdbecdd145d1ea4d2e8a09c7 SHA256 33efd8282fe158bf9329cfea473834e001776699c75059a373b6562fbf1bb850
-EBUILD clex-3.17.ebuild 606 RMD160 06302d43bd9ffb8d3f057ae92faef2671ad8badc SHA1 714453af373bde744c8f8583aad8c914ef9c70ac SHA256 6b50ea4c7d180387e1480610fa12fc14988ef924bcf7933c54fa3faed9d0ecde
-MISC ChangeLog 464 RMD160 754b8ddee07432ba5201e44e06f281c6de2f3add SHA1 c5b49dcb7f82d8d91ba0621ef71b6e657375c6da SHA256 2641847ec19be8c08129eacb2bd9cdc71fadfd574033a0eb7aeaad1347ff4e9d
+DIST clex-3.18.tar.gz 206303 RMD160 187ccae2ecdba57f45b58024ced6f51c652af69a SHA1 f6497d7669fd6e4a7d0a57437632c5ad451ecfc6 SHA256 e71dbe391234de3b237948231d9baa739cf3956a668dff7cb96af8fc0b7a0576
+EBUILD clex-3.18.ebuild 479 RMD160 ed8fe195ef3666528d95be111321f1a929df254d SHA1 8d041fb2cb0b327fc528d11cd28e50105d8a2bc9 SHA256 b64aaff31cc85e435d4e1d585feb3be7b6698e778597f77a39a62fa8525939d5
+MISC ChangeLog 666 RMD160 dcff8b08826dbbc6860f4332dcd0f311f000c374 SHA1 2a5d4d90b91b680cd0186ece406fe148d412125a SHA256 29cc4ee965c6bcb13ee58d55ee160c334318b7c3f6e31d1db22d667cf7964c7f
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
