@@ -4,13 +4,12 @@
 
 DESCRIPTION="Ncurses file manager with a full-screen user interface"
 HOMEPAGE="http://www.clex.sk/"
-SRC_URI="http://www.clex.sk/download/${P}.tar.gz
-	doc? ( http://www.clex.sk/download/${PN}-help-html-${PV}.tar.gz )"
+SRC_URI="http://www.clex.sk/download/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~sparc ~x86"
-IUSE="doc"
+IUSE=""
 
 DEPEND="sys-libs/ncurses"
 RDEPEND="${DEPEND}"
@@ -18,6 +17,4 @@ RDEPEND="${DEPEND}"
 src_install() {
 	emake DESTDIR="${D}" install || die "emake install failed."
 	dodoc ChangeLog
-
-	use doc && dohtml "${WORKDIR}"/${PN}-help-html-${PV}/*
 }
